--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,9 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+# Documentation
+Documentation/api/
+Documentation/index.*
+_site/
+Assets/**/obj*
+
