--- a/Documentation/filterConfig.yml
+++ b/Documentation/filterConfig.yml
@@ -1,9 +1,6 @@
 apiRules:
 - include:
-    uidRegex: ^DocFxForUnity
-    type: Namespace
-- include:
-    uidRegex: ^Global
+    uidRegex: ^SampleNamespace\.*
     type: Namespace
 - exclude:
     uidRegex: .*
