--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -24,13 +24,19 @@ jobs:
       - name: Build
         run: docfx Documentation/docfx.json
 
+      - name: Install Python
+        uses: actions/setup-python@v4
+        
+      - name: Fix Assembly  
+        run: python my_script.py
+
       # Upload the generated documentation
       - name: Upload site artifact
         uses: actions/upload-artifact@v1
         with:
           name: _site
           path: _site # Must equals the 'build.dest' value on your docfx.json
-
+  
   # Deploy the generated documentation to the gh-pages branch
   deploy:
     needs: build
